--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head lang="en">
-        <meta charset="utf-8"
+        <meta charset="utf-8">
         <title>Landing Page</title>
     </head>
     <body>
         <div class="container">
-            <div></div>
-            <div></div>
+            <div>
+                <div class="header">
+                    <div>Home</div>
+                    <div>Projects</div>
+                    <div>About</div>
+                    <div>Contact</div>
+                </div>
+            </div>
+            <div>
+                <div></div>
+                </div>
+                <div></div>
+            </div>
             <div></div>
             <div></div>
             <div></div>
