add the second div that will content contents for image and a brief description

--- a/index.html
+++ b/index.html
@@ -6,22 +6,48 @@
     </head>
     <body>
         <div class="container">
-            <div>
+            <div class="div1">
                 <div class="header">
+                    <div class="logo">Header Logo</div>
                     <div>Home</div>
                     <div>Projects</div>
                     <div>About</div>
                     <div>Contact</div>
                 </div>
-            </div>
-            <div>
-                <div></div>
+                <div class="title">
+                    <h1>This website is awesome</h1>
                 </div>
-                <div></div>
+                <div class="image">
+                    <!-- <img src="" alt="">  -->
+                </div>
+                <span class="button">
+                    <button>Sign up</button>
+                </span>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="div2">
+                <div>
+                    <div>
+                        <h1>Some random information</h1>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="" alt="">
+                            <p></p>
+                        </div>
+                        <div></div>
+                            <img src="" alt="">
+                            <p></p>
+                        <div></div>
+                            <img src="" alt="">
+                            <p></p>
+                        <div></div>
+                            <img src="" alt="">
+                            <p></p>
+                    </div>
+                </div>
+            </div>
+            <div class="div4"></div>
+            <div class="div5"></div>
         </div>
     </body>
-</html>
+</html> 
