--- a/index.html
+++ b/index.html
@@ -46,8 +46,21 @@
                     </div>
                 </div>
             </div>
-            <div class="div4"></div>
-            <div class="div5"></div>
+            <div class="div3">
+                <div class="quote">
+                    <p></p>
+                    <div class="action">
+                        <div>
+                            <h3>Call to action! It's time!</h3>
+                            <p>Sign up for our product by click that button right over there!</p>
+                            <button>Sign up</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="div4">
+                <div> Copyright &copy; The Odin Project 2023</div>
+            </div>
         </div>
     </body>
 </html> 
