--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 </div>
                 <div class="title">
                     <h1>This website is awesome</h1>
+                    <p>
+                        This website has some subtext that goes here under 
+                        the main title. It's a smaller font and color is lower
+                        contrast.
+                    </p>
                 </div>
                 <div class="image">
                     <!-- <img src="" alt="">  -->
@@ -32,23 +37,31 @@
                     <div>
                         <div>
                             <img src="" alt="">
-                            <p></p>
+                            <p>
+                                this is some subtext under an illustration or 
+                                image
+                            </p>
                         </div>
                         <div></div>
                             <img src="" alt="">
-                            <p></p>
+                            <p>this is some subtext under an illustration or image</p>
                         <div></div>
                             <img src="" alt="">
-                            <p></p>
+                            <p>this is some subtext under an illustration or image</p>
                         <div></div>
                             <img src="" alt="">
-                            <p></p>
+                            <p>this is some subtext under an illustration or image</p>
                     </div>
                 </div>
             </div>
             <div class="div3">
                 <div class="quote">
-                    <p></p>
+                    <p>
+                        This is an inspiring quote, or a testimonial from a 
+                        customer. Maybe it's just filling up space, or maybe people 
+                        will actually read it. Who knows? All I know is that it looks nice. 
+                        <b class="quoter">-Thor</b>
+                    </p>
                     <div class="action">
                         <div>
                             <h3>Call to action! It's time!</h3>
