added css stylesheet to index.html and added styling to the header logo, and nav bar.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html>
-    <head lang="en">
-        <meta charset="utf-8">
-        <title>Landing Page</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="/styling/index.css">
+</head>
+<body>
     <body>
         <div class="container">
             <div class="div1">
                 <div class="header">
                     <div class="logo">Header Logo</div>
-                    <div>Home</div>
-                    <div>Projects</div>
-                    <div>About</div>
-                    <div>Contact</div>
+                    <div class="right">
+                        <div>Home</div>
+                        <div>Projects</div>
+                        <div>About</div>
+                        <div>Contact</div>
+                    </div>
                 </div>
                 <div class="title">
                     <h1>This website is awesome</h1>
@@ -75,5 +81,5 @@
                 <div> Copyright &copy; The Odin Project 2023</div>
             </div>
         </div>
-    </body>
-</html> 
+    </body>  
+</body>
