--- a/index.html
+++ b/index.html
@@ -21,19 +21,23 @@
                     </div>
                 </div>
                 <div class="title">
-                    <h1>This website is awesome</h1>
-                    <p>
-                        This website has some subtext that goes here under 
-                        the main title. It's a smaller font and color is lower
-                        contrast.
-                    </p>
+                    <div class="two">
+                        <div>
+                            <h1 class="awesome">This website is awesome</h1>
+                            <p class="secondary">
+                                This website has some subtext that goes here under 
+                                the main title. It's a smaller font and color is lower
+                                contrast.
+                            </p>
+                            <span class="button">
+                                <button>Sign up</button>
+                            </span>
+                        </div>
+                        <div>
+                            <span><img src="/images/ferrari.jpg" alt="image of a red ferrari"> </span>
+                        </div>
+                    </div>
                 </div>
-                <div class="image">
-                    <!-- <img src="" alt="">  -->
-                </div>
-                <span class="button">
-                    <button>Sign up</button>
-                </span>
             </div>
             <div class="div2">
                 <div>
