--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             </span>
                         </div>
                         <div>
-                            <span><img src="images/ferrari.jpg" alt="image of a red ferrari"> </span>
+                            <img src="images/ferrari.jpg" alt="image of a red ferrari">
                         </div>
                     </div>
                 </div>
