--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="styling/index.css">
 </head>
+
 <body>
+
     <body>
         <div class="container">
             <div class="div1">
@@ -25,7 +28,7 @@
                         <div>
                             <h1 class="awesome">This website is awesome</h1>
                             <p class="secondary">
-                                This website has some subtext that goes here under 
+                                This website has some subtext that goes here under
                                 the main title. It's a smaller font and color is lower
                                 contrast.
                             </p>
@@ -40,38 +43,47 @@
                 </div>
             </div>
             <div class="div2">
-                <div>
-                    <div>
-                        <h1>Some random information</h1>
+                <h1 class="info">Some random information</h1>
+                <div class="quote">
+                    <div class="img">
+                        <img src="images/ferrari.jpg" alt="">
+                        <p>
+                            this is some subtext under an illustration or
+                            image
+                        </p>
                     </div>
-                    <div>
-                        <div>
-                            <img src="" alt="">
-                            <p>
-                                this is some subtext under an illustration or 
-                                image
-                            </p>
-                        </div>
-                        <div></div>
-                            <img src="" alt="">
-                            <p>this is some subtext under an illustration or image</p>
-                        <div></div>
-                            <img src="" alt="">
-                            <p>this is some subtext under an illustration or image</p>
-                        <div></div>
-                            <img src="" alt="">
-                            <p>this is some subtext under an illustration or image</p>
+                    <div class="img">
+                        <img src="images/ferrari.jpg" alt="">
+                        <p>
+                            this is some subtext under an illustration
+                            or image
+                        </p>
+                    </div>
+                    <div class="img">
+                        <img src="images/ferrari.jpg" alt="">
+                        <p>
+                            this is some subtext under an illustration
+                            or image
+                        </p>
+                    </div>
+                    <div class="img">
+                        <img src="images/ferrari.jpg" alt="">
+                        <p>
+                            this is some subtext under an illustration
+                            or image
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="div3">
-                <div class="quote">
+                <div class="quote2">
                     <p>
-                        This is an inspiring quote, or a testimonial from a 
-                        customer. Maybe it's just filling up space, or maybe people 
-                        will actually read it. Who knows? All I know is that it looks nice. 
+                        This is an inspiring quote, or a testimonial from a
+                        customer. Maybe it's just filling up space, or maybe people
+                        will actually read it. Who knows? All I know is that it looks nice.
                         <b class="quoter">-Thor</b>
                     </p>
+                </div>
                     <div class="action">
                         <div>
                             <h3>Call to action! It's time!</h3>
@@ -79,11 +91,10 @@
                             <button>Sign up</button>
                         </div>
                     </div>
-                </div>
             </div>
             <div class="div4">
                 <div> Copyright &copy; The Odin Project 2023</div>
             </div>
         </div>
-    </body>  
+    </body>
 </body>
