--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
             </div>
             <div class="div4">
-                <div> Copyright &copy; The Odin Project 2023</div>
+                <div class="copy"> Copyright &copy; The Odin Project 2023</div>
             </div>
         </div>
     </body>
