updated the Call to action flex and style it correctly.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styling/index.css">
 </head>
 
-<body>
+<body>  
 
     <body>
         <div class="container">
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="div2">
-                <h1 class="info">Some random information</h1>
+                <h1 class="info">Some random information.</h1>
                 <div class="quote">
                     <div class="img">
                         <img src="images/ferrari.jpg" alt="">
@@ -84,13 +84,18 @@
                         <b class="quoter">-Thor</b>
                     </p>
                 </div>
-                    <div class="action">
-                        <div>
-                            <h3>Call to action! It's time!</h3>
-                            <p>Sign up for our product by click that button right over there!</p>
-                            <button>Sign up</button>
-                        </div>
+            </div>
+            <div class="action">
+                <div class="sign">
+                    <div class="left">
+                        <strong>Call to action! It's time!</strong>
+                        <p class="secondary">Sign up for our product by click that button right over there!</p>
                     </div>
+                    <div class="right">
+                        <button class="secondary">Sign up</button>
+                    </div>
+
+                </div>
             </div>
             <div class="div4">
                 <div class="copy"> Copyright &copy; The Odin Project 2023</div>
